--- a/index.html
+++ b/index.html
@@ -151,9 +151,10 @@
                 <a href="#"><i class="fa-brands fa-instagram-square"></i></a>
                 <a href="#"><span class="blind">유튜브</span><i class="fa-brands fa-youtube"></i></a>
             </div>
-            <div class="contact">전화번호 : (02) 111-1111
+            <div class="contact"><a href="tel:010-8517-4922">전화번호 : (02) 111-1111</a>
 
-                이메일 주소 : gallerypiece@cafe24.com</div>
+                <a href="vic177244@naver.com"> 이메일 주소 : gallerypiece@cafe24.com</a>
+                   </div>
         </div>
     </footer>
 </body>
